# ukodus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.analyzer  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yaml  plan-pure-giggling-dream.md
.github/workflows/: deploy.yml
argocd/: application.yaml
crates/sudoku-core/: Cargo.toml  README.md
crates/sudoku-core/examples/: diversity_check.rs
crates/sudoku-core/src/: bitset.rs  cell.rs  constraint.rs  diversity.rs  generator.rs  grid.rs  lib.rs  position.rs  puzzle_id.rs  solver.rs
crates/ukodus-analyzer/: Cargo.toml
crates/ukodus-analyzer/src/: lib.rs  main.rs
crates/ukodus-api/: Cargo.toml
crates/ukodus-api/src/: config.rs  error.rs  main.rs  state.rs
crates/ukodus-api/src/extractors/: api_key.rs  mod.rs
crates/ukodus-api/src/graph/: client.rs  queries.rs
crates/ukodus-api/src/models/: galaxy.rs  mod.rs  puzzle.rs
crates/ukodus-api/src/routes/: galaxy.rs  health.rs  mining.rs  mod.rs  puzzles.rs  results.rs  share.rs  techniques.rs  ws.rs
crates/ukodus-api/src/services/: galaxy_service.rs  mod.rs  result_service.rs
docs/: galaxy-api-requirements.md
frontend/: 404.html  docker-entrypoint.sh  index.html  llms-full.txt  llms.txt  nginx.conf  package-lock.json  package.json  robots.txt  sitemap.xml  svelte.config.js  vite.config.ts
frontend/about/: index.html
frontend/app/: index.html
frontend/assets/: galaxy.css  galaxy.js  game-bridge.js  site.css  site.js
frontend/difficulty/: index.html
frontend/galaxy/: index.html
frontend/how-to-play/: index.html
frontend/play/: index.html
frontend/privacy/: index.html
frontend/src/: app.css  app.html
frontend/static/: llms-full.txt  llms.txt  runtime-config.js  sitemap.xml
frontend/techniques/: index.html
frontend/wasm/: sudoku_wasm.js  sudoku_wasm_bg.wasm
k8s/: ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
k8s/analyzer/: cronjob.yaml
k8s/api/: deployment.yaml  service-alias.yaml  service.yaml
k8s/cloudflare/: deployment.yaml  sealed-secret.yaml
k8s/frontend/: deployment.yaml  nginx-configmap.yaml  posthog-secret.yaml  service.yaml
k8s/neo4j/: service.yaml  (+1 more)
migrations/: 001_add_discovered_flag.cypher
scripts/: build-wasm.sh  seed-galaxy.sh  setup-local.sh  sync-core.sh
(+45 files in other folders)
