[package]
name = "sudoku-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core Sudoku engine with solving, generation, and variant support"

[dependencies]
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serde_json = "1"
