[package]
name = "ukodus-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Batch technique extraction and similarity analysis worker"

[dependencies]
sudoku-core.workspace = true
neo4rs.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
chrono.workspace = true
